Add order match benchmark