@@ -1,14 +1,22 @@
 package com.carter.runner;
 
-import com.carter.order.OrderPool;
-import org.openjdk.jmh.Main;
+import com.carter.engine.MatchingEngineBenchmarks;
+import org.openjdk.jmh.results.format.ResultFormatType;
+import org.openjdk.jmh.runner.Runner;
+import org.openjdk.jmh.runner.options.Options;
+import org.openjdk.jmh.runner.options.OptionsBuilder;
 
 public class BenchmarkRunner {
 
-    private final OrderPool pool = new OrderPool();
-
-    public static void main(String[] args) throws Exception {
-        Main.main(args);
+    public static void main() throws Exception {
+        Options opt = new OptionsBuilder()
+                .include(MatchingEngineBenchmarks.class.getSimpleName())
+                // .jvmArgsAppend("-Xlog:safepoint*=info")
+                // .jvmArgsAppend("-XX:+UseZGC")
+                // .result("results.json")
+                .resultFormat(ResultFormatType.JSON)
+                .build();
+        new Runner(opt).run();
     }
 
 }
